[Luiz] Fix table overflow

--- a/src/IdentityServer/wwwroot/css/site.css
+++ b/src/IdentityServer/wwwroot/css/site.css
@@ -9,6 +9,7 @@
 
 .content {
   grid-area: content;
+  overflow-x: auto;
 }
 
 footer {
